# obsidian-tag-tools

./: .gitignore  .tagex-config.example.yaml  CLAUDE.md  DELETE_COMMAND_STATUS.md  GEMINI.md  README.md  TEST_PROGRESS_NOTEBOOK.md  amoxtli-tags.json  main.py  pyproject.toml  tag-merge-op_20250914_151536.json  wacky-synonyms.txt
doc/: ANALYTICS.md  ARCHITECTURE.md  DIAGRAM-REPORT.md  FRONTMATTER.md  ROADMAP.md  TAG_TYPE_FILTERING_PLAN.md  TESTING_NARRATIVE.md
doc/archive/: TAG_TYPE_FILTERING_PLAN.md
docs/: ALGORITHMS.md  ANALYTICS.md  ARCHITECTURE.md  COMMAND_FLOW_DIAGRAM.md  COMMAND_HIERARCHY.md  COMMAND_STRUCTURE_ANALYSIS.md  CONFIGURATION.md  CONFIGURATION_REFERENCE.md  DESIGN_CONSIDERATIONS.md  GETTING_STARTED.md  HAPPY_PATH.md  QUICK_REFERENCE.md  README.md  RESTRUCTURE_COMPLETE.md  SETUP_GUIDE.md  SYNONYM_CONFIGURATION.md  TAG_QUALITY_IMPROVEMENTS.md  TROUBLESHOOTING.md  analytics.md  architecture.md
docs/archive/: DESIGN_CONSIDERATIONS.md  EVALUATION_2025_09_30.md  RESTRUCTURE_ROADMAP.md  TAG_QUALITY_IMPROVEMENTS.md
extractor/: core.py
logs/: README.md
operations/: __init__.py  tag_operations.py
parsers/: frontmatter_parser.py  inline_parser.py
scripts/: fix_duplicate_tags.py  remove_bak_files.py
tag-analysis/: README.md  SEMANTIC_ANALYSIS.md  cooccurrence_analyzer.py  merge_analyzer.py  migration_analysis.py  pair_analyzer.py  tag_migration.py
tagex/: main.py
tagex/analysis/: __init__.py  breadth_analyzer.py  content_analyzer.py  merge_analyzer.py  pair_analyzer.py  plural_normalizer.py  recommendations.py  singleton_analyzer.py  synonym_analyzer.py
tagex/config/: __init__.py  exclusions_config.py  file_exclusion_config.py  plural_config.py  synonym_config.py
tagex/core/extractor/: core.py  output_formatter.py
tagex/core/operations/: __init__.py  add_tags.py  fix_duplicates.py  tag_operations.py
tagex/core/parsers/: frontmatter_parser.py  inline_parser.py
tagex/templates/.tagex/: config.yaml  synonyms.yaml
tagex/utils/: file_discovery.py  input_handler.py  plural_normalizer.py  vault_maintenance.py
tests/: README.md  conftest.py  test_add_tags_operation.py  test_analysis.py  test_breadth_analyzer.py  test_cli.py  test_content_analyzer.py  test_exclusions_config.py  test_extractor.py  test_operations.py  test_parsers.py  test_plural_normalizer.py  test_post_init_workflow.py  test_synonym_config.py  test_utils.py  test_workflows.py
utils/: file_discovery.py  tag_normalizer.py
