[project]
name = "obsidian-tag-tools"
version = "0.1.0"
description = "Extract tags from Obsidian vault markdown files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[tool.setuptools]
packages = ["extractor", "parsers", "utils", "operations", "tag-analysis"]
py-modules = ["main"]

[project.scripts]
tagex = "main:cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
