[project]
name = "tagex"
version = "0.1.0"
description = "Extract, analyze, and modify tags in Obsidian markdown files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Contributors" }]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]
dev = [
    "ruff>=0.6.0",
    "black>=24.0",
    "mypy>=1.9.0",
]

[project.scripts]
tagex = "tagex.main:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["tagex", "tagex.core", "tagex.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
